--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,36 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
+
+# Binary output
+updo
+main
+
+# Go build artifacts
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-
-# Test binary, built with `go test -c`
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-# Go workspace file
-go.work
-
-.DS_Store
-.vscode/
-.mypy_cache/
-.idea
-dist/
+# Go directories
 bin/
-main
+dist/
+
+# Go workspace
+go.work
+go.work.sum
+
+# Dependencies
+vendor/
+
+# IDE files  
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+
+# Local files
+CLAUDE.local.md
