--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,6 +12,11 @@ builds:
       - linux
       - windows
       - darwin
+    ldflags:
+      - -s -w
+      - -X main.version={{.Version}}
+      - -X main.commit={{.Commit}}
+      - -X main.date={{.Date}}
 
 archives:
   - name_template: >-
