--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,63 @@
-name: goreleaser
+name: CI/CD
 
 on:
   push:
-    tags:
-      - '*'
+    tags: ["*"]
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 permissions:
   contents: write
 
 jobs:
-  goreleaser:
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+          cache: true
+      - name: Golangci-lint
+        uses: golangci/golangci-lint-action@v8.0.0
+        with:
+          version: latest
+          args: --timeout=5m
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+          cache: true
+      - name: Run tests
+        run: go test -v ./...
+
+  release:
+    name: Release
+    if: github.ref_type == 'tag'
+    needs: [lint, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      -
-        name: Set up Go
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.24
-      -
-        name: Run GoReleaser
+          go-version: "1.24"
+          cache: true
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
