--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           go-version: "1.24"
           cache: true
+      - name: Build Lambda binary
+        run: make build-lambda
       - name: Golangci-lint
         uses: golangci/golangci-lint-action@v8.0.0
         with:
@@ -39,6 +41,8 @@ jobs:
         with:
           go-version: "1.24"
           cache: true
+      - name: Build Lambda binary
+        run: make build-lambda
       - name: Run tests
         run: go test -v ./...
 
