feat: multi-region AWS Lambda monitoring with enhanced TUI (#21)
* feat: add multi-region lambda monitoring with deploy/destroy commands

* feat: implement multi-region tui and simple monitoring modes

* refactor: revert tui multi-region support, add config regions, improve simple monitoring

* feat: fix logging inconsistency between lambda and local executors

* fix: use structured logging for lambda invocation failures

* feat(tui): add logs widget with multi-region support and code reorganization

* refactor(tui): break monolithic tui.go into 6 focused files

* feat(aws): expand to 13 regions with progress bars and spinners

* refactor(cmd): restructure to updo aws namespace with clean help and region management

* fix: remove comments

* perf(aws): optimize binary size by pre-zipping lambda during build

Moved ZIP creation from runtime to build-time, reducing binary size from 24MB to 15MB
and eliminating compression overhead during deployment. Added zip prerequisite check
to Makefile doctor target.

* feat(tui): add tree-view grouping and improve search for multi-region targets

* feat(tui): add collapsible groups with expand/collapse all support

* fix(notifications): handle webhook errors in tui logs without disrupting display

* fix(tui): search functionality in tui mode and added tests

* test: add comprehensive tui test suite

* fix(tui): header color consistency in navigation and search modes

* test(utils): add focused test coverage for logger and cli modules

* test(stats): add comprehensive test coverage for monitoring statistics

* fix: show the entire logs

* docs: streamline readme and update configuration examples

* ci: fix CI pipeline issues

- add build-lambda step to both lint and test jobs for bootstrap.zip embed
- fix utils progress function panic when total is zero

* fix: resolve test and linting issues

- refactor if-else to switch statement in logs.go per golangci-lint
- remove TestManager_HeaderColorConsistency test that requires terminal

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ main
 # Go directories
 bin/
 dist/
+aws/bootstrap
+aws/bootstrap.zip
 
 # Go workspace
 go.work
@@ -31,3 +33,5 @@ vendor/
 # Local files
 CLAUDE.local.md
 **/.claude/settings.local.json
+*.local.md
+*.local.toml
