fix: update documentation and install script for new binary naming format

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -65,5 +65,8 @@ brews:
       name: homebrew-tap
       token: "{{ .Env.GH_PAT }}"
 
+checksum:
+  name_template: checksums.txt
+
 changelog:
   use: github
